--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ It is important to create software and applications that help computer and mobil
 				                                <h4 style="text-align:center"> </h4>
 						                 <h6>jatain(Job name)</h6>
 						                <p>Jatain's job details here.</p>
-						                 <h4>Neel (job name)</h4>
-						                 <p>Neel's job details here.</p>
+						                 <h4>Head In Computer Programmer in Microsoft</h4>
+						                 <p>Neel's dream job is to work in Microsoft. His goal is to work with Microsoft PVT LTD. Computer programmers write programs and rewrite programs until they are free of errors. They use a workflow chart and coding formulas until the desired information is produced. I will need more Attention to detail and patience will set you apart in this career.</p>
 						                 
                                   
 
