--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 								<p>Computer makes people's life more convenient and learning easier. Now people's life cannot be separated from computer, so I think computer will be an indispensable industry in the future, so I think is very necessary to learn IT.</p>
 								<h3>Neel Patel</h3>
 								<p>Neel Patel is student who is studying Bachelor of IT in RMIT University. He like to watch Formula 1 Race and like to travel around the world. he is also passionate about Cars and Motorbikes.</p>
-                                                                  <img src="neel.jpg" alt="neel">
 								<h3>Student ID</h3>
 								<p>s3795503@student.rmit.edu.au</p>
 								<h3>IT Interest</h3>
@@ -96,10 +95,7 @@ It is important to create software and applications that help computer and mobil
                                                                  You'll provide solutions to protect the company from a constantly evolving hostile environment of cybercrimes run by cunning cybercriminals, intent on causing harm through service interruptions, identity and financial theft
                                                                  Cyber security analyst develops regulation to ensure the company's systemstay as safe as possible. this involves searching the latest information technology security trends and software to help prevent any problems or attacks
                                                                  Cyber security analyst prepares regular reports to documents any improvements,implementations and security breaches that caused damage to the company
-                                                                  I tell you that there is a dire need of cyber security analyst to the world to prenvent people from frauds and the scams
-                                                                   If you think I am wrong go to the different job sites, to see the most requirement job and I am 95% sure that you find the job of cyber security analyst
-                                                                  The starting salary of cyber security analyst is $7oK per annnum, which is quite a handsome amount.....
-									This is Jatin ideal Job.</p>
+                                                                  I tell you that there is a dire need of cyber security analyst to the world to prenvent people from frauds and the scams.This is Jatin ideal Job.</p>
 						                 <h4>Head In Computer Programmer in Microsoft</h4>
 						                 <p>Neel's dream job is to work in Microsoft. His goal is to work with Microsoft PVT LTD. Computer programmers write programs and rewrite programs until they are free of errors. They use a workflow chart and coding formulas until the desired information is produced. I will need more Attention to detail and patience will set you apart in this career.</p>
 						                 
