--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<h3>IT Interest</h3>
 								<p>Computer makes people's life more convenient and learning easier. Now people's life cannot be separated from computer, so I think computer will be an indispensable industry in the future, so I think is very necessary to learn IT.</p>
 								<h3>Neel Patel</h3>
-								<p>Neel Patel is student who is studying Bachelor of IT in RMIT University. He like to watch Formula 1 Race and like to travel around the world. he is also passionate about Cars and Motorbikes.</p>
+								<p>Neel Patel is student who is studying Bachelor of IT in RMIT University. He like to watch Formula 1 Race and like to travel around the world. He is also passionate about Cars and Motorbikes.</p>
                                                                 <img src="neel1.jpg" alt="neel1">
 								<h3>Student ID</h3>
 								<p>s3795503@student.rmit.edu.au</p>
