--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 								</header>
 								<h3>Ahmed Sultan</h3>
 								<p>Ahmed Sultan, an aviation student at RMIT, main hobbies that he has is playing soccer and watching soccer games all the time.</p>
-								<img src="pic01.jpg" alt="Ahmed">	
+								<img src="pic01.jpg" alt="Ahmed">
+								<h3>Student ID</h3>
+						                <p>s3774221@student.rmit.edu.au</p>
+								<h3>IT Interest</h3>
+								<p>Information technology is one of the cores of any business job this day, helping my career job to be more productive. Allowing me to work more efficiently and to maximise productivity. And with that comes faster communication, electronic storage and the protection of important documentation within my workplace.</p>
 								<h3>Jason Peng</h3>
 								<p>Jason is an RMIT student studying IT. He likes playing video games and table tennis.</p>
 								<img src="photo.png" alt="Jason">
