--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@ It is important to create software and applications that help computer and mobil
 								</header>
 								<h4>Contribution</h4>
 								
+								<P>In AloPeople team members we’ve got a Manager Position at Qatar Airways at Bin Hamad International Airport, A Developing Application, A cyber Security Analyst and Head in Computer Programmer in Microsoft. </P>
+								<P>All positions fitted the project construction, allowing AloPeople group team to build and develop the project concept of providing a safe and secure platform environment to achieve the goal of the project idea of connecting people to each other safely and widely within a location in the same area. </p>
 							</article>
 
 				<!-- Contribution -->
