Ahmed 3 testing profile updating
Ahmed 3 testing profile updating

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 								</header>
 								<h3>Ahmed Sultan</h3>
 								<p>Ahmed Sultan, an aviation student at RMIT, main hobbies that he has is playing soccer and watching soccer games all the time.</p>
+								<p>Ahmed’s personality is reflecting a leadership and group worker orientated, as well a good fast learner.</p>
 								<img src="pic01.jpg" alt="Ahmed">
 								<h3>Student ID</h3>
 						                <p>s3774221@student.rmit.edu.au</p>
