--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 It is important to create software and applications that help computer and mobile users in daily life. Due to all these reasons, it’s really important to learn how to use programming languages in our daily life.Java, javascript, C#, C++, PHP, Python, Swift, SQL, Ruby, etc. programming languages are the reasons behind the innovations in information technologies. If today we are seeing robots, artificial intelligence, machine learning, bitcoins, the blockchain, IOT (Internet of Things), Cloud Computing, etc. new technology and products in IT industry, then it’s because of programming languages. If you want to become skilled in programming.</p>
 								<h3>Jatin Mittal</h3>
 								<p>Jatin Mittal, I am a hardworking and good learner, my hobby is to play cricket, because it is the only interesting game which I ever seen. </p>
+                                                                <p>Jatin's personality reflecting the honesty, punctuality, passion regarding work,and I am a reliable person. I am a positive thinker and always interact with different people to know about their traditions and cultures.....</p>
 								<img src="jatin1.jpg" alt="jatin">
 								<h3>Student ID</h3>
 						                <p>s3808212@student.rmit.edu.au</p>
