--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									<h1>AloPeople</h1>
 									<p>is your local tourist agency, designed to connect you with local families comprising many diverse cultures with a difference. Be immersed in the traditions of another country, in your very own backyard. </p>
 								</header>
-								<a href="Download the image from Messenger_Lite" class="logo pic">
+								<a href="Download the image to Messenger_Lite" class="logo pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 								</a>
 							</article>
