--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<p>Information technology is one of the cores of any business job this day, helping my career job to be more productive. Allowing me to work more efficiently and to maximise productivity. And with that comes faster communication, electronic storage and the protection of important documentation within my workplace.</p>
 								<h3>Jason Peng</h3>
 								<p>Jason is an RMIT student studying IT. He likes playing video games and table tennis. Sometimes will go to the cinema to see the latest superhero movie.</p>
-								<p>Jason's personality is helpful and responsible, always be there for others when they need help,and he has a good understanding of computer knowledge, including programming and webpage production.</p>
+								<p>Jason is helpful and responsible. He will listen to others' troubles and give them good advice.He was always there when someone needed help, and he had a good understanding of computers, including programming and web page making.</p>
 								<img src="photo.png" alt="Jason">
 								<h3>Student ID</h3>
 						                <p>s3713664@student.rmit.edu.au</p>
