--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
+									<img src="alopeople.jpg" alt="alopeople">
 									<h2 style="text-align:center">AloPeople Team Profile</h2>
 								</header>
 								<h3>Ahmed Sultan</h3>
