--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								        <p>is your local tourist agency, designed to connect you with local families comprising many diverse cultures with a difference. Be immersed in the traditions of another country, in your very own backyard. </p>
 								</header>
 								<img src="alopeople.jpg" alt="alopeople">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+									<span class="arrow icon solid fa-chevron-right"></span>
 								</a>
 							</article>
 
